Fixed spacing for dropdown nav

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -271,9 +271,9 @@ a {
 		}
 	}
 	.widget .extendednavigation ul li:hover ul {
-		min-height: 60px;
 		height: auto;
 		background-color: fadeout(@color-swatch4, 85%);
+		top: 5px;
 	}
 }
 
@@ -777,7 +777,7 @@ h1.blog-post-title {
 
 @media @tablet {
 	header p {
-		padding-top: 10px;
+		padding-top: 15px;
 	}
 	.left, .right {
 		text-align: left;
